finished mvp graphics

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <div id="horizontal"></div>
         <div id="vertical"></div>
       <div id="innerConsole">
-        <div id="gameTitle">Simon</div>
-        <div id="startButton">Start</div>
+
+        <div id="gameTitle">simon</div>
+          <button id="startButton"></button>
+          <div id="start">START</div>
         <div id="difficulty"></div>
 
   </div>
@@ -42,8 +44,5 @@
 
 
     </div>
-  <script type="text/javascript" src="app.js">
-
-  </script>
   </body>
 </html>
