--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Simon ®</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -11,10 +12,10 @@
     <div id="mainToy">
 
       <div id="buttonsWrap">
-        <div id="green"></div>
-        <div id="red"></div>
-        <div id="yellow"></div>
-        <div id="blue"></div>
+        <div id="green" class="section"></div>
+        <div id="red" class="section"></div>
+        <div id="yellow" class="section"></div>
+        <div id="blue" class="section"></div>
         <div id="horizontal"></div>
         <div id="vertical"></div>
       <div id="innerConsole">
@@ -23,7 +24,9 @@
           <button id="startButton"></button>
           <div id="start">START</div>
         <div id="difficulty"></div>
+<script type="text/javascript" scr="app.js">
 
+</script>
   </div>
 </div>
 
