--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 
+<!DOCTYPE html>
 <html>
   <head>
     <title>Simon ®</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <meta charset="utf-8">
-    <title></title>
   </head>
   <body>
 
@@ -24,28 +23,11 @@
           <button id="startButton"></button>
           <div id="start">START</div>
         <div id="difficulty"></div>
-<script type="text/javascript" scr="app.js">
 
-</script>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
   </body>
+
+  <script src="app.js"></script>
 </html>
