--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Simon ®</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
+  <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
     <meta charset="utf-8">
   </head>
   <body>
