--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Simon ®</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
   <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+
     <meta charset="utf-8">
   </head>
   <body>
@@ -20,7 +21,7 @@
         <div id="vertical"></div>
       <div id="innerConsole">
 
-        <div id="gameTitle">simon</div>
+        <div id="gameTitle">Simon</div>
           <button id="startButton"></button>
           <div id="start">START</div>
         <div id="difficulty"></div>
