add audio html links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Simon ®</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
 
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
         <div id="vertical"></div>
       <div id="innerConsole">
 
-        <div id="gameTitle">Simon</div>
+        <div id="gameTitle">simon</div>
           <button id="startButton"></button>
           <div id="start">START</div>
         <div id="difficulty"></div>
@@ -31,5 +31,12 @@
     </div>
   </body>
 
-  <script src="app.js"></script>
+  <script src="javascript/app.js"></script>
 </html>
+
+
+<audio src="assets/razz.m4a" id="razz">
+<audio src="assets/green.m4a" id="sound1">
+<audio src="assets/red.m4a" id="sound2">
+<audio src="assets/yello.m4a" id="sound3">
+<audio src="assets/blue.m4a" id="sound4">
