simonMove function working

--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
 <audio src="assets/razz.m4a" id="razz">
 <audio src="assets/green.m4a" id="sound1">
 <audio src="assets/red.m4a" id="sound2">
-<audio src="assets/yello.m4a" id="sound3">
+<audio src="assets/yellow.m4a" id="sound3">
 <audio src="assets/blue.m4a" id="sound4">
