added css, loosing flash

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Simon ®</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 
     <meta charset="utf-8">
   </head>
