--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div id="gameTitle">simon</div>
           <button id="startButton"></button>
           <div id="start">START</div>
-        <div id="difficulty"></div>
+          <button id="resetButton"></button>
+            <div id="reset">RESET</button>
 
   </div>
 </div>
