added counter css

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div id="innerConsole">
 
         <div id="gameTitle">simon</div>
+        <div id="roundDisplay">0</div>
           <button id="startButton"></button>
           <div id="start">START</div>
           <button id="resetButton"></button>
