added win alert after 10 rounds

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 <audio src="assets/razz.m4a" id="razz">
-<audio src="assets/green.m4a" id="sound1">
-<audio src="assets/red.m4a" id="sound2">
-<audio src="assets/yellow.m4a" id="sound3">
-<audio src="assets/blue.m4a" id="sound4">
+<audio src="assets/green.m4a" id="sound1" class="sound">
+<audio src="assets/red.m4a" id="sound2" class="sound">
+<audio src="assets/yellow.m4a" id="sound3" class="sound">
+<audio src="assets/blue.m4a" id="sound4" class="sound">
