sections responive with sound. sounds terrible.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 
 
-    <div id="mainToy">
+    <!--<div id="mainToy" class="rotate"-->
+      <div id="mainToy">
 
       <div id="buttonsWrap">
         <div id="green" class="section"></div>
@@ -27,25 +28,25 @@
 
         <div id="gameTitle">simon</div>
         <div id="roundDisplay">0</div>
-          <button id="startButton"></button>
-          <div id="start">START</div>
-          <button id="resetButton"></button>
-            <div id="reset">RESET</button>
+
+          <button id="startButton">
+          </button>
+              <div id="start">START</div>
+
+          <button id="resetButton">
+          </button>
+            <div id="reset">RESET</div>
+
 
   </div>
 </div>
     </div>
+    <audio src="assets/razz.m4a" id="razz">
+    <audio src="assets/green.m4a" id="greenSound" class="sound">
+    <audio src="assets/red.m4a" id="redSound" class="sound">
+    <audio src="assets/yellow.m4a" id="yellowSound" class="sound">
+    <audio src="assets/blue.m4a" id="blueSound" class="sound">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
       <script src="javascript/app.js"></script>
   </body>
-
-
-
 </html>
-
-
-<audio src="assets/razz.m4a" id="razz">
-<audio src="assets/green.m4a" id="sound1" class="sound">
-<audio src="assets/red.m4a" id="sound2" class="sound">
-<audio src="assets/yellow.m4a" id="sound3" class="sound">
-<audio src="assets/blue.m4a" id="sound4" class="sound">
