add rotate class for maintoy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-    <!--<div id="mainToy" class="rotate"-->
+    <!-- <div id="mainToy" class="rotate"> -->
       <div id="mainToy">
 
       <div id="buttonsWrap">
