added rotate button with reset

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           </button>
               <div id="start">START</div>
 
+          <button id="crazyMode">?</button>
+
+
+
           <button id="resetButton">
           </button>
             <div id="reset">RESET</div>
