added timer display

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div id="gameTitle">simon</div>
         <div id="roundDisplay">0</div>
-
+        <div id="timeToMove">5</div>
           <button id="startButton">
           </button>
               <div id="start">START</div>
