add difficulty toggle switch

--- a/index.html
+++ b/index.html
@@ -41,10 +41,19 @@
           </button>
             <div id="reset">RESET</div>
 
-
+            <div id="difficultySwitch">
+            <label class="switch">
+          <input type="checkbox">
+          <div class="slider"></div>
+          <div id="difficultyEasy">Easy</div>
+          <div id="difficultyHard">Hard</div>
+        </label>
+      </div>
   </div>
 </div>
     </div>
+
+    <div id="playerAlert">YOU WIN!</div>
     <audio src="assets/razz.m4a" id="razz">
     <audio src="assets/green.m4a" id="greenSound" class="sound">
     <audio src="assets/red.m4a" id="redSound" class="sound">
