fixed timer issue counting negative

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div id="playerAlert" class="winLoseMessage"><img src="assets/win.svg"/></div>
     <div id="playerAlertLose" class="winLoseMessage"><img src="assets/lose.svg"/></div>
-    <audio src="assets/razz.m4a" id="razz">
+    <audio src="assets/razz.m4a" id="razz" class="sound" >
     <audio src="assets/green.m4a" id="greenSound" class="sound">
     <audio src="assets/red.m4a" id="redSound" class="sound">
     <audio src="assets/yellow.m4a" id="yellowSound" class="sound">
