fix markdown formatting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Simon ®</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
     <meta charset="utf-8">
   </head>
   <body>
@@ -15,39 +15,38 @@
     <!-- <div id="mainToy" class="rotate"> -->
       <div id="mainToy">
 
-      <div id="buttonsWrap">
-        <div id="green" class="section"></div>
-        <div id="red" class="section"></div>
-        <div id="yellow" class="section"></div>
-        <div id="blue" class="section"></div>
-        <div id="horizontal"></div>
-        <div id="vertical"></div>
-      <div id="innerConsole">
+        <div id="buttonsWrap">
+          <div id="green" class="section"></div>
+          <div id="red" class="section"></div>
+          <div id="yellow" class="section"></div>
+          <div id="blue" class="section"></div>
+          <div id="horizontal"></div>
+          <div id="vertical"></div>
+        <div id="innerConsole">
 
-        <div id="gameTitle">simon</div>
-        <div id="roundDisplay">0</div>
-        <div id="timeToMove">5</div>
-          <button id="startButton">
-          </button>
-              <div id="start">START</div>
+          <div id="gameTitle">simon</div>
+          <div id="roundDisplay">0</div>
+          <div id="timeToMove">5</div>
+            <button id="startButton"></button>
+                <div id="start">START</div>
 
-          <button id="crazyMode">?</button>
-
+            <button id="crazyMode">?</button>
 
 
-          <button id="resetButton">
-          </button>
-            <div id="reset">RESET</div>
 
-            <div id="difficultySwitch">
-            <label class="switch">
-          <input id="difficultyToggle" type="checkbox">
-          <div class="slider"></div>
-          <div id="difficultyEasy">Easy</div>
-          <div id="difficultyHard">Hard</div>
-        </label>
-      </div>
-  </div>
+            <button id="resetButton">
+            </button>
+              <div id="reset">RESET</div>
+
+              <div id="difficultySwitch">
+              <label class="switch">
+            <input id="difficultyToggle" type="checkbox">
+            <div class="slider"></div>
+            <div id="difficultyEasy">Easy</div>
+            <div id="difficultyHard">Hard</div>
+          </label>
+        </div>
+    </div>
 </div>
     </div>
 
